--- a/package.json
+++ b/package.json
@@ -1,41 +1,32 @@
 {
-  "name": "test-react-shallow-equal",
+  "name": "test-react-shallow-equal-build",
   "version": "0.0.4",
   "description": "Unit test against inadvertent performance problems",
-  "main": "dist/index.js",
-  "typings": "index.d.ts",
+  "private": true,
   "author": "Seb Insua <me@sebinsua.com>",
   "license": "MIT",
   "lint-staged": {
-    "*.{js,jsx}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{js,jsx}": ["prettier --write", "git add"]
   },
   "scripts": {
     "commitmsg": "validate-commit-msg",
     "precommit": "lint-staged",
     "prepush": "npm test",
-    "test": "jest",
-    "build": "babel src --out-dir dist --ignore __tests__/*.js",
-    "release": "npm test && npm run build && standard-version"
+    "postinstall": "lerna bootstrap && lerna link",
+    "test": "lerna run test",
+    "build": "lerna run build",
+    "release": "lerna run release"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-jest": "^21.0.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "enzyme": "^2.9.1",
     "flow-bin": "^0.54.1",
     "husky": "^0.14.3",
-    "jest": "^21.0.2",
+    "lerna": "^2.2.0",
     "lint-staged": "^4.1.3",
     "prettier": "^1.6.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
-    "recompose": "^0.25.0",
     "standard-version": "^4.2.0",
     "validate-commit-msg": "^2.14.0"
   }
