--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "test-react-shallow-equal-build",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Unit test against inadvertent performance problems",
   "private": true,
   "author": "Seb Insua <me@sebinsua.com>",
   "license": "MIT",
   "lint-staged": {
-    "*.{js,jsx}": ["prettier --write", "git add"]
+    "*.{js,jsx}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "scripts": {
     "commitmsg": "validate-commit-msg",
