--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postinstall": "lerna bootstrap && lerna link",
     "test": "lerna run test",
     "build": "lerna run build",
-    "release": "lerna run test && lerna run build && standard-version && lerna publish --skip-git --force-publish"
+    "release": "lerna run test && lerna run build && lerna publish --conventional-commits"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -30,7 +30,6 @@
     "lerna": "^2.2.0",
     "lint-staged": "^4.1.3",
     "prettier": "^1.6.1",
-    "standard-version": "^4.2.0",
     "validate-commit-msg": "^2.14.0"
   }
 }
